<resources>
    <string name="app_name">Watch</string>

    <!-- Strings related to login/Signup -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_2">Re-enter Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register </string>
    <string name="action_sign_up">Sign up</string>
    <string name="policy">By clicking Sign Up, you agree to our Terms and that you have read our Privacy Policy</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="search_title">Search</string>
    <string name="settings_title">Settings</string>
    <string name="search_hint">Friend name</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="title_activity_push_recieve">PushRecieveActivity</string>

    <string name="map_title">My Location</string>


    <string-array name="radius_options">
        <item>50</item>
        <item>150</item>
        <item>250</item>
        <item>350</item>
        <item>450</item>
        <item>550</item>
        <item>650</item>
        <item>750</item>
        <item>850</item>
        <item>950</item>
    </string-array>
    <string name="title_activity_retrieve_location">Map</string>
</resources>
